# espionox_egui_demo

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
espionox_config/: default.yaml
src/: main.rs
src/logic/: _frontend.rs  backend.rs  mod.rs  state.rs
src/logic/backend/: chat.rs  mod.rs
src/logic/comms/: backend.rs  frontend.rs  mod.rs
src/logic/pages/: chat.rs  mod.rs  settings.rs
src/logic/pages/modals/: mod.rs
src/logic/pages/modals/agent_info/: components.rs  mod.rs
src/logic/pages/modals/agent_info/components/: caching_mech_ui.rs  init_prompt_ui.rs  mod.rs
