[package]
name = "espionox_egui_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catppuccin-egui = "2.0"
eframe = { version = "0.22.0" }
tokio = { version = "1.28.2", features = ["full"] }
lazy_async_promise = { version = "0.5.0" }

espionox = { git = "https://github.com/voidKandy/espionox", branch = "api_qol_improvements" }
anyhow = "1.0.71"

tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
once_cell = "1.18.0"
thiserror = "1.0.49"
