[package]
name = "espionox_egui_demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catppuccin-egui = "2.0"
tokio = { version = "1.28.2", features = ["full"] }
lazy_async_promise = { version = "0.5.0" }

espionox = { git = "https://github.com/voidKandy/espionox_lib" , branch="stable", features=["long_term_memory"]}
anyhow = "1.0.71"

tracing = { version = "0.1.37", features = ["log"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
once_cell = "1.18.0"
thiserror = "1.0.49"
serde = "1.0.189"
serde_yaml = "0.9.25"
eframe = "0.23.0"
rfd = "0.12.0"
